log
Tue 21 Mar 2023 09:43:28 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:11: error: unused variable ‘lista’ [-Werror=unused-variable]
   33 |     List *lista = (List *) malloc(sizeof(List));
      |           ^~~~~
cc1: all warnings being treated as errors
Compilation failed
982dae4
Tue 21 Mar 2023 09:45:45 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
270accb
Tue 21 Mar 2023 09:50:10 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:17: error: statement with no effect [-Werror=unused-value]
   43 |   lista->current->next;
      |   ~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
8ef99f9
Tue 21 Mar 2023 09:51:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5861557
